--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,6 +9,16 @@ body{
     background: #EDEDED;
 }
 
+h1{
+    font-size: 2rem;
+    text-align: center;
+    padding-top: 5px;
+}
+
+h3{
+    font-size: small;
+}
+
 .send-right{
     margin-left: auto;
 }
@@ -81,12 +91,19 @@ nav li:hover{
     border-bottom: solid 2px #003785;
 }
 .relatedArticle{
-    width: 280px;
-    height: 150px;
+    width: 260px;
+    /* height: 150px; */
     background: #b9ffff;
     margin: auto;
     margin-bottom: 5px;
     border-radius: 2px;
+    padding: 6px;
+    transition: all .2s;
+}
+
+.relatedArticle:hover{
+    transform: scale(1.03);
+    box-shadow: 0px 0px 10px 0px #1465bb;
 }
 
 .imagePrincipal{
@@ -95,4 +112,52 @@ nav li:hover{
     margin-bottom: 10px;
     margin-left: 80px;
 }
+
+.navPost{
+    display: flex;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.navPost div{
+    flex-grow: 1;
+    padding: 10px;
+}
+
+.navPost p{
+    cursor: pointer;
+    background: #003785;
+    color: #ffffff;
+}
+
+.navPost p:hover{
+    color: black;
+}
 /* CONTENEDOR */
+
+/* FOOTER */
+section#footer{
+    /* height: 100px; */
+    background-color: #003785;
+    color: #ffffff;
+}
+
+footer{
+    display: flex;
+    max-width: 1100px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: auto;
+    justify-content: space-between;
+}
+
+section .contact{
+    margin-top: 10px;
+}
+
+section .logo{
+    margin-top: 10px;
+}
+
+/* FOOTER */
+
