--- a/CSS/style.css
+++ b/CSS/style.css
@@ -104,6 +104,7 @@ nav li:hover{
 .relatedArticle:hover{
     transform: scale(1.03);
     box-shadow: 0px 0px 10px 0px #1465bb;
+    cursor: pointer;
 }
 
 .imagePrincipal{
